--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: linear-gradient(180deg, rgba(89, 76, 238, 1) 0%, #8dd0f5 100%);
+    background: linear-gradient(180deg, blueviolet 0%, #8dd0f5 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,7 +15,7 @@ body{
     display: none;
 }
 .container{
-    background-color: #5c54ed;
+    background-color: blueviolet;
     box-shadow: rgba(0,0,0,0.24) 0px 3px 8px;
     padding: 3rem;
     color: antiquewhite;
